--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.37.1
-pandas==2.2.2
-numpy==2.0.1
-scikit-learn==1.5.1
-joblib==1.4.2
-openpyxl==3.1.5
+streamlit
+pandas
+numpy
+scikit-learn
+joblib
+openpyxl
